--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/hourTextNumber"
         android:layout_width="64dp"
         android:layout_height="48dp"
-        android:layout_marginStart="104dp"
+        android:layout_marginStart="114dp"
         android:layout_marginTop="36dp"
         android:ems="10"
         android:hint="@string/hint_hour"
@@ -35,7 +35,7 @@
         android:id="@+id/minuteTextNumber"
         android:layout_width="64dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="124dp"
+        android:layout_marginEnd="114dp"
         android:ems="10"
         android:hint="@string/hint_minute"
         android:inputType="number"
@@ -55,5 +55,15 @@
         app:layout_constraintEnd_toStartOf="@+id/minuteTextNumber"
         app:layout_constraintStart_toEndOf="@+id/hourTextNumber"
         app:layout_constraintTop_toTopOf="@+id/hourTextNumber" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/timer_config_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hourTextNumber" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
