--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -69,4 +69,16 @@
         app:layout_constraintTop_toTopOf="@+id/endTimeText"
         tools:text="12:34" />
 
+    <TextView
+        android:id="@+id/purposeDisplay"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/canvasView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
